// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should ask user to turn on notification settings if they did not turn it on after creating a UserArticleLink when creating a Article 1`] = `
Array [
  Object {
    "body": Object {
      "contents": Array [
        Object {
          "text": "Your submission is now recorded at https://cofacts.hacktabl.org/article/new-article-id",
          "type": "text",
          "wrap": true,
        },
      ],
      "layout": "vertical",
      "type": "box",
    },
    "footer": Object {
      "contents": Array [
        Object {
          "action": Object {
            "label": "See reported message",
            "type": "uri",
            "uri": "https://cofacts.hacktabl.org/article/new-article-id",
          },
          "color": "#ffb600",
          "style": "primary",
          "type": "button",
        },
        Object {
          "action": Object {
            "label": "Provide more info",
            "type": "uri",
            "uri": "https://liff.line.me/1563196602-X6mLdDkW/liff/index.html?p=reason&token=eyJhbGciOiJIUzI1NiJ9.eyJzZXNzaW9uSWQiOjE1Nzc4MzY4MDAwMDAsInN1YiI6InVzZXItaWQtMCIsImV4cCI6MTU3NzkyMzIwMH0.8BerlnWZ5tp5Voipq2feE3W1sWxadJ9whgrIitn1h5U",
          },
          "color": "#ffb600",
          "style": "primary",
          "type": "button",
        },
      ],
      "layout": "vertical",
      "spacing": "sm",
      "type": "box",
    },
    "type": "bubble",
  },
  Object {
    "body": Object {
      "contents": Array [
        Object {
          "text": "You can turn on notification if you want Cofacts to notify you when someone replies this message.",
          "type": "text",
          "wrap": true,
        },
      ],
      "layout": "vertical",
      "type": "box",
    },
    "footer": Object {
      "contents": Array [
        Object {
          "action": Object {
            "label": "Go to settings",
            "type": "uri",
            "uri": "https://liff.line.me/1563196602-X6mLdDkW/liff/index.html?p=setting&utm_source=rumors-line-bot&utm_medium=reply-request",
          },
          "color": "#00B172",
          "style": "primary",
          "type": "button",
        },
      ],
      "layout": "vertical",
      "spacing": "sm",
      "type": "box",
    },
    "header": Object {
      "contents": Array [
        Object {
          "text": "🔔  Receive updates",
          "type": "text",
          "wrap": true,
        },
      ],
      "layout": "vertical",
      "paddingBottom": "none",
      "type": "box",
    },
    "type": "bubble",
  },
  Object {
    "body": Object {
      "contents": Array [
        Object {
          "text": "Your friends may know the answer 🌟 Share your question to friends, maybe someone can help!",
          "type": "text",
          "wrap": true,
        },
      ],
      "layout": "vertical",
      "type": "box",
    },
    "footer": Object {
      "contents": Array [
        Object {
          "action": Object {
            "label": "Share on LINE",
            "type": "uri",
            "uri": "line://msg/text/?Please%20help%20me%20verify%20if%20this%20is%20true%3A%20https%3A%2F%2Fcofacts.hacktabl.org%2Farticle%2Fnew-article-id",
          },
          "color": "#ffb600",
          "style": "primary",
          "type": "button",
        },
        Object {
          "action": Object {
            "label": "Share on Facebook",
            "type": "uri",
            "uri": "https://www.facebook.com/dialog/share?openExternalBrowser=1&app_id=719656818195367&display=popup&hashtag=%23ReportedToCofacts&href=https%3A%2F%2Fcofacts.hacktabl.org%2Farticle%2Fnew-article-id",
          },
          "color": "#ffb600",
          "style": "primary",
          "type": "button",
        },
      ],
      "layout": "vertical",
      "spacing": "sm",
      "type": "box",
    },
    "type": "bubble",
  },
]
`;

exports[`should create a UserArticleLink when creating a Article 1`] = `
Array [
  Object {
    "_id": "_id",
    "articleId": "new-article-id",
    "createdAt": 2020-01-01T00:00:00.000Z,
    "lastViewedAt": 2020-01-01T00:00:00.000Z,
    "userId": "user-id-0",
  },
]
`;

exports[`should redirect user to other fact-checkers for invalid options 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [],
    "searchedText": "Some text forwarded by the user",
  },
  "event": Object {
    "input": "1️⃣ I got the message from:
Somewhere outside LINE",
    "type": "message",
  },
  "isSkipUser": undefined,
  "replies": Array [
    Object {
      "text": "Thanks for the info.",
      "type": "text",
    },
    Object {
      "altText": "We suggest forwarding the message to the following fact-checkers instead. They have 💁 1-on-1 Q&A service to respond to your questions.

📱 Please proceed on your mobile phone.",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "text": "We suggest forwarding the message to the following fact-checkers instead. They have 💁 1-on-1 Q&A service to respond to your questions.",
              "type": "text",
              "wrap": true,
            },
          ],
          "layout": "vertical",
          "type": "box",
        },
        "footer": Object {
          "contents": Array [
            Object {
              "action": Object {
                "label": "MyGoPen 賣擱騙",
                "type": "uri",
                "uri": "line://ti/p/%40mygopen",
              },
              "color": "#333333",
              "style": "primary",
              "type": "button",
            },
            Object {
              "action": Object {
                "label": "蘭姆酒吐司",
                "type": "uri",
                "uri": "line://ti/p/%40rumtoast",
              },
              "color": "#333333",
              "style": "primary",
              "type": "button",
            },
          ],
          "layout": "vertical",
          "spacing": "sm",
          "type": "box",
        },
        "styles": Object {
          "body": Object {
            "separator": true,
          },
        },
        "type": "bubble",
      },
      "type": "flex",
    },
  ],
  "userId": undefined,
}
`;

exports[`should submit article when valid source is provided 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [],
    "searchedText": "Some text forwarded by the user",
    "selectedArticleId": "new-article-id",
    "sessionId": 1577923200000,
  },
  "event": Object {
    "input": "1️⃣ I got the message from:
A LINE group",
    "type": "message",
  },
  "isSkipUser": undefined,
  "replies": Array [
    Object {
      "altText": "Your submission is now recorded at https://cofacts.hacktabl.org/article/new-article-id",
      "contents": Object {
        "contents": Array [
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "text": "Your submission is now recorded at https://cofacts.hacktabl.org/article/new-article-id",
                  "type": "text",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "label": "See reported message",
                    "type": "uri",
                    "uri": "https://cofacts.hacktabl.org/article/new-article-id",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
                Object {
                  "action": Object {
                    "label": "Provide more info",
                    "type": "uri",
                    "uri": "https://liff.line.me/1563196602-X6mLdDkW/liff/index.html?p=reason&token=eyJhbGciOiJIUzI1NiJ9.eyJzZXNzaW9uSWQiOjE1Nzc5MjMyMDAwMDAsInN1YiI6InVzZXJJZCIsImV4cCI6MTU3ODAwOTYwMH0.NNLTji977VFNyYJ0Mplj63tAUBrzifCmNtWp-0dHrus",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "vertical",
              "spacing": "sm",
              "type": "box",
            },
            "type": "bubble",
          },
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "text": "Your friends may know the answer 🌟 Share your question to friends, maybe someone can help!",
                  "type": "text",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "label": "Share on LINE",
                    "type": "uri",
                    "uri": "line://msg/text/?Please%20help%20me%20verify%20if%20this%20is%20true%3A%20https%3A%2F%2Fcofacts.hacktabl.org%2Farticle%2Fnew-article-id",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
                Object {
                  "action": Object {
                    "label": "Share on Facebook",
                    "type": "uri",
                    "uri": "https://www.facebook.com/dialog/share?openExternalBrowser=1&app_id=719656818195367&display=popup&hashtag=%23ReportedToCofacts&href=https%3A%2F%2Fcofacts.hacktabl.org%2Farticle%2Fnew-article-id",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "vertical",
              "spacing": "sm",
              "type": "box",
            },
            "type": "bubble",
          },
        ],
        "type": "carousel",
      },
      "type": "flex",
    },
  ],
  "userId": "userId",
}
`;
